// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary headline component 1`] = `
<Text
  accessibilityRole="header"
  aria-level="3"
  maxFontSizeMultiplier={2}
  minimumFontScale={0.7}
>
  PM hails breakthrough ahead of key Commons vote
</Text>
`;

exports[`2. article summary strapline component 1`] = `
<Text
  accessibilityRole="header"
  aria-level="4"
  maxFontSizeMultiplier={2}
  minimumFontScale={0.7}
>
  PM hails breakthrough ahead of key Commons vote
</Text>
`;
